[package]
name = "packet-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.0"
num-traits = "0.2.15"
pnet = "0.33.0"
smallvec = "1.11.0"
thiserror = "1.0.43"

[dev-dependencies]
allocation-counter = "0.5.0"
criterion = "0.5.1"
etherparse = "0.13.0"

[[bench]]
name = "parse_benchmark"
harness = false
